Unify back to one ArgumentProvider